--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,69 @@
         </div>
     </section>
 
-
+    <section class="services">
+        <div class="container">
+            <div class="services__top">
+                <div class="services__title-box">
+                    <div class="services__title">
+                        Если вы зашли на наш сайт:
+                    </div>
+                    <div class="services__list">
+                        <ul>
+                            <li class="services__list-item"> Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
+                            <li class="services__list-item"> Значит вы беспокоитесь о своем будущем и будущем своих детей.</li>
+                            <li class="services__list-item"> Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="services__button">
+                    <img class="services__img" src="img/waste_icon.png" alt="">
+                    <a href="#" class="services__btn">
+        Что куда сдавать
+      </a>
+                </div>
+            </div>
+            <div class="services__items">
+                <div class="services__item">
+                    <img class="services__item-img" src="img/about-1.png" alt="">
+                    <div class="services__item-title">
+                        Как мы это делаем
+                    </div>
+                    <div class="services__item-text">
+                        <p>Продвижение раздельного сбора и переработки отходов в регионах, а также сокращение неперерабатываемых отходов, просвещение широких слоев населения о важности участия общественности в решении “мусорной” проблемы.</p>
+                    </div>
+                    <div class="services__item-btn">
+                        <a class="services__item-btn-link" href="#">Подробнее</a>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <img class="services__item-img" src="img/about-2.png" alt="">
+                    <div class="services__item-title">
+                        Вдохновление
+                    </div>
+                    <div class="services__item-text">
+                        <p>Польза раздельного сбора мусора очевидна. Такой подход уменьшает степень загрязнения воды, воздуха и земли. Вторичная переработка снижает количество потребляемой воды и величину городских свалок, экономит природные ресурсы Земли.</p>
+                    </div>
+                    <div class="services__item-btn">
+                        <a class="services__item-btn-link" href="#">Подробнее</a>
+                    </div>
+                </div>
+                <div class="services__item">
+                    <img class="services__item-img" src="img/about-3.png" alt="">
+                    <div class="services__item-title">
+                        Позиция
+                    </div>
+                    <div class="services__item-text">
+                        <p>Общественные экологические организации России объединили свои усилия и создали Альянс против сжигания и за переработку отходов на нижеизложенных принципах для информирования населения России об опасностях, которые несет применение
+                            мусоросжигательных технологий.</p>
+                    </div>
+                    <div class="services__item-btn">
+                        <a class="services__item-btn-link" href="#">Подробнее</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
