--- a/app/index.html
+++ b/app/index.html
@@ -124,9 +124,78 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                <div class="about__title">
+                    О движении
+                </div>
+                <div class="about__text">
+                    <p>Мы — большое сообщество людей, которое бережно относится к ресурсам планеты и выступает за новую систему обращения с отходами. Мы основываемся на принципах 3R — reduce, reuse, recycle (сокращай, используй повторно, перерабатывай).
+                        Мы — некоммерческая негосударственная ассоциация в сфере экологии и защиты окружающей среды «РазДельный Сбор».</p>
 
+                    <p>Ассоциация появилась в Санкт-Петербурге в ноябре 2011 года, когда наши активисты провели первую акцию по сбору вторсырья. Сегодня штабы движения работают от Сочи до Владивостока — ищите штаб рядом с вами в географии движения. Московское
+                        отделение открылось в 2014 году.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-
+    <section class="form">
+        <div class="container">
+            <div class="form__inner">
+                <div class="form__content">
+                    <div class="form__title-box">
+                        <div class="form__title">
+                            Обратная связь
+                        </div>
+                        <div class="form__text">
+                            <p>(Задать вопрос по теме сообщества, узнать про раздельный сбор, внести предложение или замечание и т.д.)</p>
+                        </div>
+                    </div>
+                    <div class="form__box">
+                        <form class="" action="index.html" method="post">
+                            <div class="form__box-inner">
+                                <div class="form__box-left">
+                                    <label>
+                  E-mail
+                  <input type="text" name="" value="">
+                </label>
+                                    <label>
+                  <p>Способ обратной связи </p>
+                  <p>(VK, Instagram, Facebook, WhatsApp)</p>
+                  <input type="text" name="" value="">
+                </label>
+                                    <label>
+                  Ф.И.О.
+                  <input type="text" name="" value="">
+                </label>
+                                    <label>Тема вопроса
+                  <select class="" name="">
+                    <option value="">-------</option>
+                    <option value="">Вопрос</option>
+                    <option value="">Предложение</option>
+                    <option value="">Претензия</option>
+                    <option value="">Как собирать</option>
+                    <option value="">Место сбора</option>
+                    <option value="">Другое</option>
+                  </select>
+                </label>
+                                </div>
+                                <div class="form__box-right">
+                                    <label>
+                  Сообщение
+                  </label>
+                                    <textarea>Добрый день!...</textarea>
+                                    <input class="to-send" type="image" src="img/send.png" width="50px" height="">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
